--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
 blinker==1.6.3
 click==8.1.7
-dnspython==2.4.2
-email-validator==2.0.0.post2
 Flask==3.0.0
-Flask-Login==0.6.2
+Flask-Login @ git+https://github.com/maxcountryman/flask-login.git@7d98a49bc38d0849367b348bfe37a2b689323419
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
-idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
-SQLAlchemy==2.0.21
+SQLAlchemy==2.0.22
 typing_extensions==4.8.0
-Werkzeug==2.2.3
+Werkzeug==3.0.0
 WTForms==3.1.0
